# nova-demo

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  nova-demo-0.1.0.tgz  pyproject.toml
.github/workflows/: docker-publish.yml
nova-demo/: Chart.yaml  values.yaml
nova-demo/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
nova-demo/templates/tests/: test-connection.yaml
src/nova_demo/: app.py  settings.py
src/nova_demo/models/: message.py
src/nova_demo/provider/: chat_session_provider.py  check_token.py
src/nova_demo/routers/: chat.py
src/nova_demo/services/: chat_session_service.py
